Added icons for most of the tabs
Implemented a complex mechanism of switching to BTDevicesListFragment only in case BT is enabled
(either initially enabled, or was enabled by the user on the fly)